
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct credential {char* password; void* username; void* path; int port; void* host; void* protocol; } ;


 int atoi (char*) ;
 scalar_t__ fgets (char*,int,int ) ;
 int g_free (void*) ;
 void* g_strdup (char*) ;
 int g_warning (char*,char*) ;
 char* gnome_keyring_memory_alloc (int) ;
 int gnome_keyring_memory_free (char*) ;
 char* gnome_keyring_memory_strdup (char*) ;
 int stdin ;
 char* strchr (char*,char) ;
 int strcmp (char*,char*) ;
 size_t strlen (char*) ;
 char* strrchr (void*,char) ;

__attribute__((used)) static int credential_read(struct credential *c)
{
 char *buf;
 size_t line_len;
 char *key;
 char *value;

 key = buf = gnome_keyring_memory_alloc(1024);

 while (fgets(buf, 1024, stdin)) {
  line_len = strlen(buf);

  if (line_len && buf[line_len-1] == '\n')
   buf[--line_len] = '\0';

  if (!line_len)
   break;

  value = strchr(buf, '=');
  if (!value) {
   g_warning("invalid credential line: %s", key);
   gnome_keyring_memory_free(buf);
   return -1;
  }
  *value++ = '\0';

  if (!strcmp(key, "protocol")) {
   g_free(c->protocol);
   c->protocol = g_strdup(value);
  } else if (!strcmp(key, "host")) {
   g_free(c->host);
   c->host = g_strdup(value);
   value = strrchr(c->host, ':');
   if (value) {
    *value++ = '\0';
    c->port = atoi(value);
   }
  } else if (!strcmp(key, "path")) {
   g_free(c->path);
   c->path = g_strdup(value);
  } else if (!strcmp(key, "username")) {
   g_free(c->username);
   c->username = g_strdup(value);
  } else if (!strcmp(key, "password")) {
   gnome_keyring_memory_free(c->password);
   c->password = gnome_keyring_memory_strdup(value);
   while (*value)
    *value++ = '\0';
  }





 }

 gnome_keyring_memory_free(buf);

 return 0;
}
